--- a/config/plugins.yaml
+++ b/config/plugins.yaml
@@ -410,18 +410,7 @@
     let g:vimwiki_hl_headers = 1
     let g:vimwiki_hl_cb_checked = 1
     let g:vimwiki_autowriteall = 0
-  hook_source: |-
-    let g:vimwiki_list = [
-    \   { 'diary_header': 'Diary',
-    \     'diary_link_fmt': '%Y-%m/%d',
-    \     'auto_toc': 1,
-    \     'path': '~/docs/wiki/',
-    \     'syntax': 'markdown',
-    \     'ext': '.md' },
-    \   { 'path': '~/docs/books/',
-    \     'syntax': 'markdown',
-    \     'ext': '.md' }
-    \ ]
+  hook_source: source $VIM_PATH/config/plugins/vimwiki.vim
 
 - repo: norcalli/nvim-colorizer.lua
   if: has('nvim-0.4')
