Feature: 新增 markdown 相关快键映射

--- a/config/plugins.yaml
+++ b/config/plugins.yaml
@@ -86,6 +86,7 @@
       \ 'makefile=make',
       \ 'py=python'
       \ ]
+  hook_source: source $VIM_PATH/config/plugins/markdown.vim
 
 # Javascript related
 - repo: pangloss/vim-javascript
