Feature: 添加混合相对行号插件，并开启相关配置

--- a/config/local.plugins.yaml
+++ b/config/local.plugins.yaml
@@ -2,6 +2,7 @@
 - repo: tpope/vim-surround
 - repo: tpope/vim-repeat
 - repo: tpope/vim-commentary
+- repo: jeffkreeftmeijer/vim-numbertoggle
 
 # 快选择代码块
 - repo: gcmt/wildfire.vim
