--- a/config/local.plugins.yaml
+++ b/config/local.plugins.yaml
@@ -9,3 +9,8 @@
 
 # 多光标
 - repo: mg979/vim-visual-multi
+
+# vim-tmux 导航
+- repo: christoomey/vim-tmux-navigator
+  if: "! (has('win32') || has('win64'))"
+  hook_source: source $VIM_PATH/config/plugins/vim-tmux-navigator.vim
