Config: 配置 nvim-visual-multi 插件
Signed-off-by: Moore.Huang <moore@moorehy.com>

--- a/config/local.plugins.yaml
+++ b/config/local.plugins.yaml
@@ -11,3 +11,5 @@
 - repo: mg979/vim-visual-multi
 
 - repo: tveskag/nvim-blame-line
+  hook_add: |-
+    let g:blameLineVirtualTextFormat = '     %s'
