Optimize: 优化 nvim-blame-line 显示样式

--- a/config/local.plugins.yaml
+++ b/config/local.plugins.yaml
@@ -12,4 +12,5 @@
 
 - repo: tveskag/nvim-blame-line
   hook_add: |-
-    let g:blameLineVirtualTextFormat = '     %s'
+    let g:blameLineVirtualTextFormat = '     %s'
+    let g:blameLineGitFormat = ' %an ⏽  %as ⏽  %s ⏽ %h'
